--- a/notebooks/hypothesis_about_the_mean.ipynb
+++ b/notebooks/hypothesis_about_the_mean.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypothesis about the mean\n",
+    "### Hypothesis about the mean\n",
     "\n",
     "* H0: the mean annual compensation of the population of data scientists is $110,000\n",
     "* HA: the mean annual compensation of the population of data scientists is higher than $110,000\n",
