--- a/notebooks/hypothesis_about_the_mean.ipynb
+++ b/notebooks/hypothesis_about_the_mean.ipynb
@@ -306,8 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### z-score\n",
-    "z-score = (sample statistic - hypothesized parameter value) / standard error"
+    "<img src=\"..\\data\\z_score.jpg\" width=\"500\" height=\"200\">"
    ]
   },
   {
